--- a/style.css
+++ b/style.css
@@ -204,16 +204,17 @@ footer {
 
 *{margin:0;padding:0;box-sizing:border-box;}
 body{font-family:Arial, sans-serif;line-height:1.6;background-colour:#B6D0E2;}
-header{background-color: #ffd9eb;text-align:center;padding:2px;}
+header{background-color: # #0096FF;text-align:center;padding:2px;}
 nav ul{list-style:none;display:flex;justify-content:center;flex-wrap:wrap;}
 nav li{margin:10px;}
-nav a{color: #ffd9eb;text-decoration:none;font-weight:bold;}
+nav a{color: FAFAFA;text-decoration:none;font-weight:bold;}
 main{max-width:1200px;margin:20px auto;padding:0 15px;}
-footer{background-color: #ffd9eb;text-align:center;padding:15px;margin-top:30px;}
+footer{background-color: # #0096FF;text-align:center;padding:15px;margin-top:30px;}
 @media(max-width:992px){nav ul{flex-direction:column;align-items:center;}}
 @media(max-width:600px){
   header{padding:10px;position:fixed;}
   main{padding:10px;}
   nav li{margin:5px 0;}
 }
+
 
